# study

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  Copy_of_Welcome_To_Colaboratory.ipynb  Copy_of_basic_text_classification.ipynb  mypy.ini  techstack.md  techstack.yml
development/database/rdbms/postgresql/: dvdrental.pgerd
development/devops/ansible/ansible-docker/: README.md
development/devops/cloud-init/: docker-setup  docker-setup.yaml  hello-world
development/devops/docker/swarm/stackdemo/: Dockerfile  README.md  app.py
development/devops/gradle/sample_structuring_software_projects-kotlin-dsl/: README
development/devops/gradle/sample_structuring_software_projects-kotlin-dsl/build-logic/android-application/src/main/kotlin/: com.example.android-application.gradle.kts
development/devops/gradle/sample_structuring_software_projects-kotlin-dsl/build-logic/commons/src/main/kotlin/: com.example.commons.gradle.kts
development/ml/tf/: Copy_of_Welcome_To_Colaboratory.ipynb  Copy_of_basic_text_classification.ipynb
development/ml/tf/.ipynb_checkpoints/: Copy_of_basic_text_classification-checkpoint.ipynb
development/ml/tiktoken/: num_tokens_from_messages.py  tiktoken1.py
development/programming_language/python/laxleague/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  run_tests  setup.py
development/programming_language/python/laxleague/.run/: pytest_all.run.xml
development/programming_language/python/laxleague/.scripts/: ci  run_backend_main  run_tests
development/programming_language/python/laxleague/src/laxleague/: __main__.py  guardian.py  hello.py  player.py
development/programming_language/python/laxleague/src/laxleague.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
development/programming_language/python/laxleague/src/laxleague/backend/: main.py
development/programming_language/python/laxleague/tests/laxleague/: test_guardian.py  test_player.py
development/programming_language/python/laxleague/tests/laxleague/backend/: test_main.py
