[tool.poetry]
name = "study-tdd-laxleague"
version = "0.1.0"
description = "The description of the package"
license = "MIT"
authors = ["Sumin Son <clvswft03@gmail.com>"]
repository = "https://github.com/todaypp/study"
homepage = "https://github.com/todaypp/study"
keywords = ["example", "study", "tdd", "test"]
readme = "README.md"  # Markdown files are supported

packages = [
    { include = "laxleague", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.scripts]
hello = "laxleague.hello:main"

[tool.poetry.build]
generate-setup-file = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here
toml = "0.10.2"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"
pytest-cov = "3.0.0"
